fix case and add more permsize in functional test