@@ -564,6 +564,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
+							<argLine>-Xmx256M -XX:MaxPermSize=128m</argLine>
 							<includes>
 								<include>**/*FT.java</include>
 							</includes>
